# TestTaskCpp

./: .gitignore  README.md
part1/: CMakeLists.txt  README.md  compressor.cpp  compressor.h  huffmantree.cpp  huffmantree.h  main.cpp
part2/: CMakeLists.txt  README.md  main.cpp  oclworker.cpp  oclworker.h
